<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.baidu.www</groupId>
	<artifactId>AILTE</artifactId>
	<version>1.0.0</version>
	<name>AILTE</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>1.8</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>2.3.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>
		<dependency>
			<groupId>com.baomidou</groupId>
			<artifactId>mybatis-plus-boot-starter</artifactId>
			<version>3.4.0</version>
		</dependency>
		<dependency>
			<groupId>com.baomidou</groupId>
			<artifactId>mybatis-plus-boot-starter</artifactId>
			<version>3.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

	</dependencies>




	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
<!--			<plugin>-->
<!--				<groupId>org.springframework.boot</groupId>-->
<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<goals>-->
<!--							<goal>repackage</goal>-->
<!--						</goals>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->
		<plugin>
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>appassembler-maven-plugin</artifactId>
			<version>1.8</version>
			<configuration>
				<configurationDirectory>conf</configurationDirectory>
				<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
				<repositoryLayout>flat</repositoryLayout>
				<useWildcardClassPath>true</useWildcardClassPath>
				<daemons>
					<daemon>
						<id>AILTE</id>
						<mainClass>com.baidu.www.AILTEApplication</mainClass>
						<commandLineArguments>
							<commandLineArgument>start</commandLineArgument>
						</commandLineArguments>
						<platforms>
							<platform>jsw</platform>
						</platforms>
						<jvmSettings>
							<!-- 启动内存配置 -->
							<maxStackSize>128</maxStackSize>
							<systemProperties>
								<systemProperty>MYCAT_HOME=.</systemProperty>
							</systemProperties>
							<extraArguments>
								<extraArgument>-server </extraArgument>
								<!--<extraArgument>-XX:MaxPermSize=64M</extraArgument>-->
								<extraArgument>-XX:+AggressiveOpts</extraArgument>
								<extraArgument>-XX:MaxDirectMemorySize=2G</extraArgument>
								<!-- 远程JMX -->
								<extraArgument>-Dcom.sun.management.jmxremote </extraArgument>
								<extraArgument>-Dcom.sun.management.jmxremote.port=1984</extraArgument>
								<extraArgument>-Dcom.sun.management.jmxremote.authenticate=false </extraArgument>
								<extraArgument>-Dcom.sun.management.jmxremote.ssl=false </extraArgument>
								<extraArgument>-Xmx1G</extraArgument>
								<extraArgument>-Xms512m</extraArgument>
							</extraArguments>
						</jvmSettings>
						<generatorConfigurations>
							<generatorConfiguration>
								<generator>jsw</generator>
								<includes>
									<include>aix-ppc-32</include>
									<include>aix-ppc-64</include>
									<include>hpux-parisc-64</include>
									<include>linux-x86-32</include>
									<include>linux-x86-64</include>
									<include>linux-ppc-64</include>
									<include>macosx-ppc-32</include>
									<include>macosx-x86-universal-32</include>
									<include>macosx-universal-32</include>
									<include>macosx-universal-64</include>
									<include>solaris-sparc-32</include>
									<include>solaris-sparc-64</include>
									<include>solaris-x86-32</include>
									<include>windows-x86-32</include>
									<include>windows-x86-64</include>
								</includes>

								<configuration>
									<property>
										<name>configuration.directory.in.classpath.first</name>
										<value>conf</value>
									</property>
									<property>
										<name>wrapper.ping.timeout</name>
										<value>120</value>
									</property>
									<property>
										<name>set.default.REPO_DIR</name>
										<value>lib</value>
									</property>
									<property>
										<name>wrapper.logfile.maxsize</name>
										<value>512m</value>
									</property>
									<property>
										<name>wrapper.logfile.maxfiles</name>
										<value>30</value>
									</property>
									<property>
										<name>wrapper.logfile</name>
										<value>logs/wrapper.log</value>
									</property>
								</configuration>

							</generatorConfiguration>
						</generatorConfigurations>
					</daemon>

				</daemons>
			</configuration>
			<executions>
				<execution>
					<id>generate-jsw</id>
					<phase>package</phase>
					<goals>
						<goal>generate-daemons</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
		<plugin>
			<artifactId>maven-assembly-plugin</artifactId>
			<configuration>
				<descriptors>
					<descriptor>src/main/assembly/assembly-win.xml</descriptor>
					<descriptor>src/main/assembly/assembly-linux.xml</descriptor>
					<descriptor>src/main/assembly/assembly-mac.xml</descriptor>
					<descriptor>src/main/assembly/assembly-solaris.xml</descriptor>
					<descriptor>src/main/assembly/assembly-unix.xml</descriptor>
					<descriptor>src/main/assembly/assembly-testtool.xml</descriptor>
				</descriptors>
			</configuration>
			<executions>
				<execution>
					<id>make-assembly</id>
					<phase>package</phase>
					<goals>
						<goal>single</goal>
					</goals>
				</execution>
			</executions>
		</plugin>




		</plugins>

	</build>


</project>
